--- a/backend/package.json
+++ b/backend/package.json
@@ -9,8 +9,10 @@
   "author": "Manish Kumar Pathak",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "express": "^4.21.0",
     "express-validator": "^7.2.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3"
   },
   "devDependencies": {
